Revision history for PostScript-Report

0.02   NOT
	- Builder allows scalar ref as shortcut for Value::Constant
	- Updated documentation

0.01   October 20, 2009
	- Initial release