@@ -2,6 +2,8 @@ Revision history for PostScript-Report
 
 0.02   NOT
 	- Builder allows scalar ref as shortcut for Value::Constant
+	- Warn if a field's value does not exist.
+	  Do not warn about existing but undefined values.
 	- Updated documentation
 
 0.01   October 20, 2009
